<resources>
    <string name="app_name">guidedLab</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="loginHint">Enter a username</string>
    <string name="loginBtnText">Login</string>

    <string name="loginErrorMessage">Invalid Login. Please Try Again</string>
    <string name="passwordErrorMessage">Invalid Password. Please Try Again</string>

    <string name="first">First Name</string>
    <string name="last">Last Name</string>
    <string name="phone">Phone</string>
    <string name="birthday">Date of Birth</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string-array name="months">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <string name="Year">Year</string>
    <string name="cert">Certificate</string>
    <string name="associate">Associates Degree</string>
    <string name="major">Major</string>
    <string-array name="listcertificates">
        <item>Android Certificate</item>
        <item>IOS Mobile Certificate</item>
    </string-array>
    <string-array name="listmajors">
        <item>Digital Media</item>
        <item>Mobile Application Development</item>
        <item>Web Development</item>
    </string-array>
    <string name="btnNext">Next</string>

    <string name="sectionClass">Select your class and time slot:</string>
    <string name="class1">MAD-107: iOS I</string>
    <string name="class2">MAD-155: Android II </string>
    <string name="class3">MAD-157: iOS II</string>
    <string name="class4">MAD-257: Capstone Mobile Class</string>

    <string name="timeRb1">T/Th 12:00 PM - 1:50 PM</string>
    <string name="timeRb2">M/W 10:00 AM - 11:50 AM</string>
    <string name="timeRb3">T/Th 12:00 PM - 1:50 PM</string>
    <string name="timeRb4">T/Th 4:00 PM - 5:50 PM</string>
    <string name="timeRb5">F 9:00 AM - 12:50 PM</string>
    <string name="timeRb6">M/W 12:00 PM - 1:50 PM</string>

    <string name="sumName">Student:</string>
    <string name="sumPhone">Phone:</string>
    <string name="sumBirth">Birthdate:</string>
    <string name="sumDegree">Degree Plan:</string>
    <string name="sumMajor">Major:</string>
    <string name="sumNext">Next Semester:</string>

    <string name="lblStudent">Student:</string>
    <string name="lblPhone">Phone:</string>
    <string name="lblBirthdate">Birthdate:</string>
    <string name="lblDegree">Degree Plan:</string>
    <string name="lblMajor">Major: </string>
    <string name="semester">Next Semester</string>


</resources>