<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFC107"
    android:backgroundTint="#00171717"
    android:backgroundTintMode="add"
    android:fillViewport="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#762CFA"
        android:backgroundTint="#FFFFFF"
        tools:context=".MainActivity">


        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="274dp"
            android:layout_height="73dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ctv1">

            <RadioButton
                android:id="@+id/rb1"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/timeRb1"
                android:textColor="#000000" />

            <RadioButton
                android:id="@+id/rb2"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/timeRb2"
                android:textColor="#000000" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="359dp"
            android:layout_height="38dp"
            android:layout_marginTop="16dp"
            android:text="@string/sectionClass"
            android:textColor="#A9000000"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckedTextView
            android:id="@+id/ctv1"
            android:layout_width="330dp"
            android:layout_height="38dp"
            android:layout_marginTop="16dp"
            android:checkMark="?android:attr/textCheckMark"
            android:text="@string/class1"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <CheckedTextView
            android:id="@+id/ctv2"
            android:layout_width="336dp"
            android:layout_height="42dp"
            android:checkMark="?android:attr/textCheckMark"
            android:text="MAD-155: Android II"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup1" />

        <CheckedTextView
            android:id="@+id/ctv3"
            android:layout_width="336dp"
            android:layout_height="42dp"
            android:checkMark="?android:attr/textCheckMark"
            android:text="@string/class3"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.438"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

        <CheckedTextView
            android:id="@+id/ctv4"
            android:layout_width="336dp"
            android:layout_height="42dp"
            android:checkMark="?android:attr/textCheckMark"
            android:text="@string/class4"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.438"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup3" />

        <RadioGroup
            android:id="@+id/radioGroup2"
            android:layout_width="274dp"
            android:layout_height="73dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ctv2">

            <RadioButton
                android:id="@+id/rb3"
                android:layout_width="match_parent"
                android:layout_height="29dp"
                android:text="@string/timeRb3"
                android:textColor="#000000" />

            <RadioButton
                android:id="@+id/rb4"
                android:layout_width="match_parent"
                android:layout_height="31dp"
                android:text="@string/timeRb4"
                android:textColor="#000000" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/radioGroup4"
            android:layout_width="274dp"
            android:layout_height="73dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ctv4">

            <RadioButton
                android:id="@+id/rb7"
                android:layout_width="match_parent"
                android:layout_height="31dp"
                android:text="@string/timeRb2"
                android:textColor="#000000" />

            <RadioButton
                android:id="@+id/rb8"
                android:layout_width="match_parent"
                android:layout_height="29dp"
                android:text="@string/timeRb5"
                android:textColor="#050505" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/radioGroup3"
            android:layout_width="274dp"
            android:layout_height="73dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ctv3">

            <RadioButton
                android:id="@+id/rb5"
                android:layout_width="match_parent"
                android:layout_height="29dp"
                android:text="@string/timeRb5"
                android:textColor="#000000" />

            <RadioButton
                android:id="@+id/rb6"
                android:layout_width="match_parent"
                android:layout_height="31dp"
                android:text="@string/timeRb6"
                android:textColor="#000000" />
        </RadioGroup>

        <Button
            android:id="@+id/idNextBtn"
            android:layout_width="117dp"
            android:layout_height="55dp"
            android:layout_marginTop="52dp"
            android:text="@string/btnNext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup4" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>